--- a/main.css/styles.css
+++ b/main.css/styles.css
@@ -1,3 +1,33 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+:root{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
+    height: 100vh;
     background-color: plum;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.js_boxgame {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    background-color: white;
+    border: solid 3px cyan;
+    line-height: 2.5;
+}
+
+.score {
+    color: gray;
 }
